2012-08-01  Patrick Gansterer  <paroga@webkit.org>

        Export StringImpl::sizeInBytes() with WTF_EXPORT_STRING_API
        https://bugs.webkit.org/show_bug.cgi?id=92851

        Reviewed by Hajime Morita.

        r124069 missed to change one export macro, which is needed
        to make the windows port with USE(EXPORT_MACROS).

        * wtf/text/StringImpl.h:
        (StringImpl):

2012-08-01  Patrick Gansterer  <paroga@webkit.org>

        [WIN] Add missing WTF export macros to functions
        https://bugs.webkit.org/show_bug.cgi?id=92842

        Reviewed by Hajime Morita.

        When we switch the windows port to USE(EXPORT_MACROS) we
        need to export all functions referenced by WebKit.dll.

        * wtf/ThreadingPrimitives.h:
        (WTF):
        * wtf/dtoa.h:
        (WTF):
        * wtf/dtoa/double-conversion.h:
        (StringToDoubleConverter):
        * wtf/unicode/UTF8.h:

2012-07-31  Sam Weinig  <sam@webkit.org>

        Stop masking 8 bits off of the visited link hash. We need all the bits!
        https://bugs.webkit.org/show_bug.cgi?id=92799

        Reviewed by Anders Carlsson.

        * wtf/StringHasher.h:
        (WTF::StringHasher::hashWithTop8BitsMasked):
        (WTF::StringHasher::hash):
        (StringHasher):
        (WTF::StringHasher::computeHashAndMaskTop8Bits):
        (WTF::StringHasher::hashMemory):
        (WTF::StringHasher::avalancheBits):
        Rename existing computeHash and hash functions to computeHashAndMaskTop8Bits
        and hashWithTop8BitsMasked respectively. Add new computeHash and hash functions
        that do the StringHash without the masking.

        * wtf/text/AtomicString.cpp:
        (WTF::CStringTranslator::hash):
        (WTF::UCharBufferTranslator::hash):
        (WTF::HashAndCharactersTranslator::hash):
        (WTF::SubstringTranslator::hash):
        (WTF::LCharBufferFromLiteralDataTranslator::hash):
        (WTF::AtomicString::fromUTF8Internal):
        * wtf/text/StringHash.h: